# MiniMaxClaw

./: README.md
grpc-demo/: CMakeLists.txt  README.md
grpc-demo/proto/: math.proto
grpc-demo/src/: client.cpp  math_service_impl.cpp  math_service_impl.h  server.cpp
pybind11-demo/: CMakeLists.txt  README.md
pybind11-demo/src/: binding.cpp  math_utils.cpp  math_utils.h
pybind11-demo/tests/: test_mylib.py
